working on search all files

--- a/main.html
+++ b/main.html
@@ -41,6 +41,8 @@
         <div class="palette enter">
             <div class="main">
                 <h1 class="mode"></h1>
+                <h2 style="display:none; font-size:10px; color:blue; cursor:pointer;" class="searchAll" >Search in all Javascript files (quick hack) </h2>
+                <h2 style="display:none; font-size:10px; color:grey; " class="searchAllStatus"></h2>
                 <input class="request" />
             </div>
             <ul class="results"></ul>
