extract caret customizations out of tern
may have broken some things in the process....

--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
         <title>Caret-T</title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="css/caret.css" id="theme">
+        <link rel="stylesheet" type="text/css" href="css/caret-tern.css" id="ternExtraCss">
     </head>
     <body>
         <div class="titlebar">
