utf8 and version bump
didnt actually fix anything..

--- a/sandbox.html
+++ b/sandbox.html
@@ -1,9 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+<meta charset="UTF-8">
     <title>Sandbox</title>
 </head>
 <body>    
-    <script src="js/ace/worker-tern.js"></script>
+    <script charset="UTF-8"  src="js/ace/worker-tern.js"></script>
 </body>
 </html>
