--- a/main.html
+++ b/main.html
@@ -49,7 +49,7 @@
             <ul class="results"></ul>
         </div>
         <script src="js/helpers.js"></script>
-        <script src="js/ace/ace.js"></script>
+        <script  charset="UTF-8" src="js/ace/ace.js"></script>
         <script data-main="./js/main.js" src="require.js"></script>
         <!-- sandbox -->
         <iframe id="sandboxFrame" style="display:none;" src="sandbox.html"></iframe>
