more encoding tests
something is wrong with ChromeApps handling of UTF-8 encoding in
sandboxed iframe

--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Caret-T</title>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="css/caret.css" id="theme">
         <link rel="stylesheet" type="text/css" href="css/caret-tern.css" id="ternExtraCss">
     </head>
@@ -49,8 +49,8 @@
             <ul class="results"></ul>
         </div>
         <script src="js/helpers.js"></script>
-        <script  charset="UTF-8" src="js/ace/ace.js"></script>
-        <script data-main="./js/main.js" src="require.js"></script>
+        <script charset="UTF-8" src="js/ace/ace.js"></script>
+        <script charset="UTF-8" data-main="./js/main.js" src="require.js"></script>
         <!-- sandbox -->
         <iframe id="sandboxFrame" style="display:none;" src="sandbox.html"></iframe>
     </body>
